# LifeOs

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
life_os/: __init__.py  cli.py  config.py  engine.py  gamification.py  models.py  persistence.py  routines.py  scheduler.py  self_care_agent.py  self_care_agent_chat.py
life_os_api/: README.md  __init__.py  deps.py  main.py  requirements.txt  schemas.py
life_os_api/routers/: companions.py  events.py  goals.py  home.py  inventory.py  modes.py  players.py  routines.py  seasons.py  self_care.py  self_care_chat.py  tasks.py
lifeos-ui/: README.md  angular.json  package-lock.json  package.json
lifeos-ui/src/: index.html  styles.scss
lifeos-ui/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
lifeos-ui/src/app/core/models/: chat.model.ts  goal.model.ts  player.model.ts  routine.model.ts  self-care.model.ts  task.model.ts
lifeos-ui/src/app/core/services/: api-error.util.ts  chat.service.ts  companion.service.spec.ts  companion.service.ts  event.service.ts  goal.service.spec.ts  goal.service.ts  inventory.service.ts  mode.service.spec.ts  mode.service.ts  notify.service.spec.ts  notify.service.ts  player.service.ts  routine.service.ts  schedule.service.ts  season.service.ts  self-care.service.ts  task.service.ts  theme.service.ts
lifeos-ui/src/app/core/state/: player-context.service.spec.ts  player-context.service.ts
lifeos-ui/src/app/core/utils/: format-hour.ts
lifeos-ui/src/app/features/goals/: goals.ts  (+3 more)
lifeos-ui/src/environments/: environment.development.ts  environment.ts
(+80 files in other folders)
